<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_celebration"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_celebration" />
        <item
            android:id="@+id/nav_celebration_country"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_celebration_country" />
        <item
            android:id="@+id/nav_celebration_religious"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_celebration_religious" />
        <item
            android:id="@+id/nav_celebration_other"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_celebration_other" />
        <item
            android:id="@+id/nav_celebration_private"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_celebration_private" />
    </group>
</menu>
