<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vnprk.holidays.views.MainFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_nav_home_to_nav_celebration"
            app:destination="@id/nav_celebration" />
        <action
            android:id="@+id/action_nav_home_to_nav_celebration_private"
            app:destination="@id/nav_celebration_private" />
        <action
            android:id="@+id/action_nav_home_to_nav_celebration_country"
            app:destination="@id/nav_celebration_country" />
        <action
            android:id="@+id/action_nav_home_to_nav_celebration_religious"
            app:destination="@id/nav_celebration_religious" />
        <action
            android:id="@+id/action_nav_home_to_nav_celebration_other"
            app:destination="@id/nav_celebration_other" />
    </fragment>
    <fragment
        android:id="@+id/nav_celebration"
        android:name="com.vnprk.holidays.views.CelebrationListFragment"
        android:label="@string/menu_celebration"
        tools:layout="@layout/fragment_celebration_list">
        <argument
            android:name="typeCelebrate"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_celebration_country"
        android:name="com.vnprk.holidays.views.CelebrationListFragment"
        android:label="@string/menu_celebration_country"
        tools:layout="@layout/fragment_celebration_list">
        <argument
            android:name="typeCelebrate"
            app:argType="integer"
            android:defaultValue="1" />
    </fragment>
    <fragment
        android:id="@+id/nav_celebration_religious"
        android:name="com.vnprk.holidays.views.CelebrationListFragment"
        android:label="@string/menu_celebration_religious"
        tools:layout="@layout/fragment_celebration_list">
        <argument
            android:name="typeCelebrate"
            app:argType="integer"
            android:defaultValue="2" />
    </fragment>
    <fragment
        android:id="@+id/nav_celebration_other"
        android:name="com.vnprk.holidays.views.CelebrationListFragment"
        android:label="@string/menu_celebration_other"
        tools:layout="@layout/fragment_celebration_list">
        <argument
            android:name="typeCelebrate"
            app:argType="integer"
            android:defaultValue="3" />
    </fragment>
    <fragment
        android:id="@+id/nav_celebration_private"
        android:name="com.vnprk.holidays.views.PrivateListFragment"
        android:label="@string/menu_celebration_private"
        tools:layout="@layout/fragment_private_list">
        <action
            android:id="@+id/action_nav_celebration_private_to_privateEventEditFragment"
            app:destination="@id/privateEventEditFragment" >
            <argument
                android:name="idEvent"
                android:defaultValue="0" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/privateEventEditFragment"
        android:name="com.vnprk.holidays.views.PrivateEventEditFragment"
        android:label="Личное событие" >
        <action
            android:id="@+id/action_privateEventEditFragment_to_nav_celebration_private"
            app:destination="@id/nav_celebration_private" />
        <argument
            android:name="idEvent"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>